2014-09-02 Alex Koutsman <alex.koutsman@cern.ch>
	* Several updates to make the tutorial work with HF trunk
	* Also the HF tutorial twiki is updated (in time for HF tutorial at TRIUMF, 10-12 Sept 2014)
	* Tagging HistFitter-00-00-41

2014-08-19 Jeanette Miriam Lorenz <jeanette.miriam.lorenz@cern.ch>
        M scripts/UpperLimitTable.py
        * resetting of signal strength parameter not done correctly for calculation of discovery p-value. 
        * Fixed by explicit reopening of the workspace before the calculation of discovery p-value.

2014-07-23 Jeanette Miriam Lorenz <jeanette.miriam.lorenz@cern.ch>
        * Tagging HistFitter-00-00-40

2014-07-15 Max Baak <mbaak@cern.ch>
	M       src/Utils.cxx
	M       src/ValidationUtils.cxx
	* Fix two small compiler warnings

2014-07-14 Jeanette Miriam Lorenz <jeanette.miriam.lorenz@cern.ch>
        * setup.sh: update to Root 5.34.19 and load more recent xrootd libraries

2014-07-08 Jeanette Miriam Lorenz <jeanette.miriam.lorenz@cern.ch>
        * small fix to setup.sh (update build version to gcc 4.7)

2014-06-25 Alex Koutsman <koutsman@cern.ch>
	* python/cmdLineUtils.py
	* src/Utils.cxx
	* src/Utils.h
	* scripts/YieldsTable.py
	* Adding option to run YieldsTable.py script with bin-by-bin calculation option -P

2014-06-13 Jeanette Miriam Lorenz <jeanette.miriam.lorenz@cern.ch>
        * setup.sh: pointing now to Root 5.34.18 patch version located in usual afs area

2014-06-05 Jeanette Miriam Lorenz <jeanette.miriam.lorenz@cern.ch>
        * setup.sh: pointing now to gcc 4.7 and Root 5.34.18 patch due to requirements by the CombinationTool package
	* analysis/batchjobs/HypoTest.py: add a rescan for -l in case that the initial scan range was not sufficient. Store the result as debug_<point>.root in case of failures in -l

2014-06-02 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* src/StatTools.cxx: switch on PROOF-lite when nCPUs>1
	* src/Utils.cxx: indenting fix
	
	* src/LimitResult.cxx: write out with %e and not %f